--- a/00. Posting/자주 사용하는 수학들(1) - 두 선분의 교점 구하기/자주 사용하는 수학들(1) - 두 선분의 교점 구하기.md
+++ b/00. Posting/자주 사용하는 수학들(1) - 두 선분의 교점 구하기/자주 사용하는 수학들(1) - 두 선분의 교점 구하기.md
@@ -6,13 +6,26 @@
 
 # Problem statement
 
-아래의 그림1과 같이 점 $P_1, P_2$로 이루어진 선분 $l_1$이 있고, 점 $Q_1, Q_2$로 이루어진 선분 $l_2$가 있을 때, 선분 $l_1$과 $l_2$가 서로 교차한다면, 이때 교점은 어떻게 찾을 수 있을 까?
+임의의 두 직선이 만나는 것을 어떻게 판단 할 수 있을까? 아래의 그림1과 같이 점 $A, B$로 이루어진 선분 $l_1$이 있고, 점 $C, D$로 이루어진 선분 $l_2$가 있을 때, 선분 $l_1$과 $l_2$가 서로 교차한다면, 이때 교점은 어떻게 찾을 수 있을까?
 
 
 
 # Solution
 
+그림()에서 서로 만나는 지점을 점 $E$라고 했을때, 다음과 같은 식이 성립한다.
+$$
+\vec{CH} = b\vec{CD} = a\vec{CA} + (1-a)\vec{CB}
+$$
+여기서 a,b는 [0, 1]구간의 실수 이다.
 
+이때 식을 간단하게 하기 위해서 양변 오른쪽에 $\vec{CA}$를 곱한 식과 $\vec{CB}$를 곱한 식을 이용하여 아래와 같이 계산 할 수 있다.
+$$
+\begin{align}
+\vec{CH}\times\vec{CA} &= (1-a)\vec{CB}\times\vec{CA} \\
+\vec{CH}\times\vec{CB} &= a\vec{CA}\times\vec{CB}
+\end{align}
+$$
+여기서 $\vec{CH}\times\vec{CA}, \vec{CH}\times\vec{CB}, \text{and } \vec{CB}\times\vec{CA}$는 방향은 같고 크기만 다른 벡터들이다. 따라서 각각을 단위벡터 $\vec{u}$에  $c_1, c_2, c_3$의 상수배를 한 값으로 치환하고, 양변에 동일한 단위벡터 $\vec{u}$를 뺀 나머지 상수들만 고려하여 식을 다시 정리하면 아래와 같이 쓸 수 있다. 
 
 # Source code
 
