Update 자주 사용하는 수학들(1) - 두 선분의 교점 구하기.md

--- a/00. Posting/자주 사용하는 수학들(1) - 두 선분의 교점 구하기/자주 사용하는 수학들(1) - 두 선분의 교점 구하기.md
+++ b/00. Posting/자주 사용하는 수학들(1) - 두 선분의 교점 구하기/자주 사용하는 수학들(1) - 두 선분의 교점 구하기.md
@@ -26,6 +26,15 @@ $$
 \end{align}
 $$
 여기서 $\vec{CH}\times\vec{CA}, \vec{CH}\times\vec{CB}, \text{and } \vec{CB}\times\vec{CA}$는 방향은 같고 크기만 다른 벡터들이다. 따라서 각각을 단위벡터 $\vec{u}$에  $c_1, c_2, c_3$의 상수배를 한 값으로 치환하고, 양변에 동일한 단위벡터 $\vec{u}$를 뺀 나머지 상수들만 고려하여 식을 다시 정리하면 아래와 같이 쓸 수 있다. 
+$$
+\begin{align}
+c_1 &= (1-a)c_3 \\
+c_2 &= -ac_3
+\end{align}
+$$
+
+
+
 
 # Source code
 
