--- a/00. Posting/자주 사용하는 수학들(1) - 두 선분의 교점 구하기/자주 사용하는 수학들(1) - 두 선분의 교점 구하기.md
+++ b/00. Posting/자주 사용하는 수학들(1) - 두 선분의 교점 구하기/자주 사용하는 수학들(1) - 두 선분의 교점 구하기.md
@@ -1,14 +1,14 @@
 # Intro
 
-해당 내용은 이 문제가 어떤 경우에 활용되는지를 적으면 좋을 듯.
+안녕하세요, 서준이네입니다. 이렇게 첫번째 포스트로 인사를 드리게 되었네요. 이번 시리즈 "자주 사용하는 수학들"은 제가 소프트웨어 개발을 하면서 마주치게 되었던 다양한 수학적인 문제들에 대한 풀이와 구현과정을 스스로 잊지 않기 위해 시작되었습니다. "자주 사용하는 수학들"의 첫번째 글을 장식할 주제는 바로 **두 선분의 사이의 교점**입니다. 해당 내용은 중, 고등학교 교과과정에서도 다룰정도로 간단한 문제이지만 게임 개발에서도 활용될 정도로 유용한 내용입니다. 특히 많이 응용되는 것은 FPS게임과 같이 먼 거리에서 총을 쏘았을 때, 총알의 궤적이 플레이어의 몸을 맞추었는지 판단을 하는 히트 스캔 계산에서 입니다.
 
 
 
 # Problem statement
 
-임의의 두 직선이 만나는 것을 어떻게 판단 할 수 있을까? 아래의 그림1과 같이 점 $A, B$로 이루어진 선분 $l_1$이 있고, 점 $C, D$로 이루어진 선분 $l_2$가 있을 때, 선분 $l_1$과 $l_2$가 서로 교차한다면, 이때 교점은 어떻게 찾을 수 있을까?
+그렇다면, 임의의 두 직선이 만나는 것을 어떻게 판단 할 수 있을까요? 막연히 두개의 선분을 상상하면서 어디쯤에서 만나겠다는 생각만으로는 프로그래밍을 통한 구현을 할 수 없기 때문에 조금 더 구체적인 상황을 상상해봅니다. 아래의 그림1과 같이 점 $A(1,1), B(-1,-1)$로 이루어진 선분 $l_1$이 있고, 점 $C(1,-1), D(-1,1)$로 이루어진 선분 $l_2$, 그리고 점 $E(1.5,1.5), F(-1.5,1.5)$로 이루어진 선분 $l_3$가 있다고 생각해 봅니다.![fig1](..\..\01_SourceCode\01_Algebra_and_Geometry\fig\usally_used_math_1_day\fig1.jpg)
 
-
+여기서 위 그림을 보면서 $l_1, l_2, l_3$에 해당하는 **직선**의 경우에는 각각 $(0,0), (1.5, 1.5), (-1.5, 1.5)$ 세개의 지점에서 만나게 될 겁니다. 하지만, 눈에 보이는 **선분**들의 교점은 $(0,0)$만 존재하는 상황이죠.
 
 # Solution
 
@@ -21,18 +21,25 @@ $$
 이때 식을 간단하게 하기 위해서 양변 오른쪽에 $\vec{CA}$를 곱한 식과 $\vec{CB}$를 곱한 식을 이용하여 아래와 같이 계산 할 수 있다.
 $$
 \begin{align}
-\vec{CH}\times\vec{CA} &= (1-a)\vec{CB}\times\vec{CA} \\
-\vec{CH}\times\vec{CB} &= a\vec{CA}\times\vec{CB}
+b\vec{CD}\times\vec{CA} &= (1-a)\vec{CB}\times\vec{CA} \\
+b\vec{CD}\times\vec{CB} &= a\vec{CA}\times\vec{CB}
 \end{align}
 $$
-여기서 $\vec{CH}\times\vec{CA}, \vec{CH}\times\vec{CB}, \text{and } \vec{CB}\times\vec{CA}$는 방향은 같고 크기만 다른 벡터들이다. 따라서 각각을 단위벡터 $\vec{u}$에  $c_1, c_2, c_3$의 상수배를 한 값으로 치환하고, 양변에 동일한 단위벡터 $\vec{u}$를 뺀 나머지 상수들만 고려하여 식을 다시 정리하면 아래와 같이 쓸 수 있다. 
+여기서 $\vec{CD}\times\vec{CA}, \vec{CD}\times\vec{CB}, \text{and } \vec{CB}\times\vec{CA}$는 방향은 같고 크기만 다른 벡터들이다. 따라서 각각을 단위벡터 $\vec{u}$에  $c_1, c_2, c_3$의 상수배를 한 값으로 치환하고, 양변에 동일한 단위벡터 $\vec{u}$를 뺀 나머지 상수들만 고려하여 식을 다시 정리하면 아래와 같이 쓸 수 있다. 
 $$
 \begin{align}
-c_1 &= (1-a)c_3 \\
-c_2 &= -ac_3
+bc_1 &= (1-a)c_3 \\
+bc_2 &= -ac_3
 \end{align}
 $$
 
+식(4)와 식(5)를 조합하여 $a, b$를 계산하면 다음과 같다.
+$$
+\begin{align}
+b &= \frac{c_3}{c_1+c_2}\\
+a &= -\frac{c_2}{c_1 + c_2}
+\end{align}
+$$
 
 
 
