--- a/00. Posting/자주 사용하는 수학들(1) - 두 선분의 교점 구하기/자주 사용하는 수학들(1) - 두 선분의 교점 구하기.md
+++ b/00. Posting/자주 사용하는 수학들(1) - 두 선분의 교점 구하기/자주 사용하는 수학들(1) - 두 선분의 교점 구하기.md
@@ -2,48 +2,116 @@
 
 안녕하세요, 서준이네입니다. 이렇게 첫번째 포스트로 인사를 드리게 되었네요. 이번 시리즈 "자주 사용하는 수학들"은 제가 소프트웨어 개발을 하면서 마주치게 되었던 다양한 수학적인 문제들에 대한 풀이와 구현과정을 스스로 잊지 않기 위해 시작되었습니다. "자주 사용하는 수학들"의 첫번째 글을 장식할 주제는 바로 **두 선분의 사이의 교점**입니다. 해당 내용은 중, 고등학교 교과과정에서도 다룰정도로 간단한 문제이지만 게임 개발에서도 활용될 정도로 유용한 내용입니다. 특히 많이 응용되는 것은 FPS게임과 같이 먼 거리에서 총을 쏘았을 때, 총알의 궤적이 플레이어의 몸을 맞추었는지 판단을 하는 히트 스캔 계산에서 입니다.
 
-
-
 # Problem statement
 
 그렇다면, 임의의 두 직선이 만나는 것을 어떻게 판단 할 수 있을까요? 막연히 두개의 선분을 상상하면서 어디쯤에서 만나겠다는 생각만으로는 프로그래밍을 통한 구현을 할 수 없기 때문에 조금 더 구체적인 상황을 상상해봅니다. 아래의 그림1과 같이 점 $A(1,1), B(-1,-1)$로 이루어진 선분 $l_1$이 있고, 점 $C(1,-1), D(-1,1)$로 이루어진 선분 $l_2$, 그리고 점 $E(1.5,1.5), F(-1.5,1.5)$로 이루어진 선분 $l_3$가 있다고 생각해 봅니다.![fig1](..\..\01_SourceCode\01_Algebra_and_Geometry\fig\usally_used_math_1_day\fig1.jpg)
 
-여기서 위 그림을 보면서 $l_1, l_2, l_3$에 해당하는 **직선**의 경우에는 각각 $(0,0), (1.5, 1.5), (-1.5, 1.5)$ 세개의 지점에서 만나게 될 겁니다. 하지만, 눈에 보이는 **선분**들의 교점은 $(0,0)$만 존재하는 상황이죠.
+여기서 위 그림을 보면서 $l_1, l_2, l_3$에 해당하는 **직선**의 경우에는 각각 $(0,0), (1.5, 1.5), (-1.5, 1.5)$ 세개의 지점에서 만나게 될 겁니다. 하지만, 눈에 보이는 **선분**들의 교점은 $(0,0)$만 존재하는 상황이죠. 그러면 먼저 선분 $l_1, l_2$가 만나는 상황부터 풀어보도록 하겠습니다. 
 
 # Solution
 
-그림()에서 서로 만나는 지점을 점 $E$라고 했을때, 다음과 같은 식이 성립한다.
+그림(1)에서 서로 만나는 지점을 점 $H$라고 했을때, 다음과 같은 식이 성립한다.
 $$
-\vec{CH} = b\vec{CD} = a\vec{CA} + (1-a)\vec{CB}
+\vec{CH} = b\vec{CD} = a\vec{CA} + (1-a)\vec{CB}\\
+\text{where } a,b \in R, \text{and } 0<=a,b<=1
 $$
-여기서 a,b는 [0, 1]구간의 실수 이다.
-
-이때 식을 간단하게 하기 위해서 양변 오른쪽에 $\vec{CA}$를 곱한 식과 $\vec{CB}$를 곱한 식을 이용하여 아래와 같이 계산 할 수 있다.
+즉, 다시말하면 교점$H$는 선분$l_1, l_2$각각을 이루는 점들 **사이에**존재한다는 의미입니다. 그렇다면 식(1)을 가지고 어떻게 해야 교점$H$를 찾을 수 있을 까요? 위의 벡터 방정식을 보면 하나의 식에 2개의 미지수가 존재하는 것 처럼 보이지만, 사실 제가 알고 있는 방법만해도 2가지의 풀이 방법이 있을 수 있습니다. 하나는 **N차원 벡터의 방정식**은 벡터를 이루는 요소를 생각해보면 그 자체적으로 N개의 식이 있는 것으로 생각 할 수 있습니다. 따라서, 위의 문제는 2차원에 대한 것이기 때문에 일종의 매개변수 방정식 형태로 풀어서 그 해를 구할 수 있습니다. 그리고 그 다음 방법은 **벡터의 외적(Cross product)**를 활용하는 방법입니다. 이번 포스트에서는 외적을 활용하는 방법으로 문제를 풀어 보려고 하는데, 이는 식이 상대적으로 간단하고 짧게 쓸 수 있기 때문입니다. 그러면 양변 오른쪽(외적은 교환법칙이 성립하지 않기 때문에 등식이 유지되려면 양 변에 같은 위치에 곱셈을 하여야 합니다.)에 $\vec{CA}$를 곱한 식과 $\vec{CB}$를 곱한 식을 이용하여 아래와 같이 계산 할 수 있다.
 $$
 \begin{align}
 b\vec{CD}\times\vec{CA} &= (1-a)\vec{CB}\times\vec{CA} \\
 b\vec{CD}\times\vec{CB} &= a\vec{CA}\times\vec{CB}
 \end{align}
 $$
-여기서 $\vec{CD}\times\vec{CA}, \vec{CD}\times\vec{CB}, \text{and } \vec{CB}\times\vec{CA}$는 방향은 같고 크기만 다른 벡터들이다. 따라서 각각을 단위벡터 $\vec{u}$에  $c_1, c_2, c_3$의 상수배를 한 값으로 치환하고, 양변에 동일한 단위벡터 $\vec{u}$를 뺀 나머지 상수들만 고려하여 식을 다시 정리하면 아래와 같이 쓸 수 있다. 
+여기서 2차원 평면에서 어떤 임의의 벡터 2개를 잡아서 외적을 하여도 그 결과는 모두 그 평면에 수직한 방향을 갖고 있습니다. 그래서 $x-y$평면에서 $\vec{CD}\times\vec{CA}, \vec{CD}\times\vec{CB}, \text{and } \vec{CB}\times\vec{CA}$는 방향은 같고 크기만 다른 벡터들이다. 따라서 각각을 단위벡터 $\vec{u}$에  $c_1, c_2, c_3$의 상수배를 한 값으로 치환하고, 양변에 동일한 단위벡터 $\vec{u}$를 뺀 나머지 상수들만 고려하여 식을 다시 정리하면 아래와 같이 쓸 수 있다. 
 $$
 \begin{align}
 bc_1 &= (1-a)c_3 \\
-bc_2 &= -ac_3
+bc_2 &= -ac_3 \\
 \end{align}
 $$
 
 식(4)와 식(5)를 조합하여 $a, b$를 계산하면 다음과 같다.
 $$
 \begin{align}
-b &= \frac{c_3}{c_1+c_2}\\
-a &= -\frac{c_2}{c_1 + c_2}
-\end{align}
+b &= \frac{c_3}{c_1 - c_2}\\
+a &= -\frac{c_2}{c_1 - c_2}\\
+\end{align}\\
+\text{where } c_1 = \lVert{\vec{CD}\times\vec{CA}}\rVert_2, c_2 = \lVert{\vec{CD}\times\vec{CB}}\rVert_2, c_3 = \lVert{\vec{CB}\times\vec{CA}}\rVert_2
 $$
 
-
+그렇다면 이 결과를 가지고 두개의 선분이 만난다는 것은 어떻게 판단 할 수 있을까요? 바로 식(1)에서 정의했던 $a, b$가 제대로 나왔는지 확인하면 됩니다. 즉, $a, b$모두 0~1 사이의 값을 갖고 있다면 두 선분은 한 점에서 만났다고 말할 수 있는 겁니다.
 
 # Source code
 
+아래는 위의 예시에 나온 경우에 따른 결과를 확인하기 위한 c코드입니다. 아래 코드에서는 위의 해설과 차이점이 있다면, 해당 교점을 직접 계산하기 위한 작은 코드가 추가되었다는 것 입니다.
+
+```c
+#include <stdio.h>
+
+char isIntersect(float* A, float* B, float* C, float* D, float* H);
 
 
+void main(void)
+{
+    //각 점들 선언
+	float A[2] = { 1, 1 };
+	float B[2] = { -1, -1 };
+	float C[2] = { 1, -1 };
+	float D[2] = { -1, 1 };
+	float E[2] = { 1.5, 1.5 };
+	float F[2] = { -1.5, 1.5 };
+    
+    //l1, l2, and l3선분에 대한 교점
+	float H1[2] = { 0 };
+	float H2[2] = { 0 };
+	float H3[2] = { 0 };
+
+	char intersectl1l2 = isIntersect(A, B, C, D, H1);
+	char intersectl2l3 = isIntersect(C, D, E, F, H2);
+	char intersectl1l3 = isIntersect(A, B, E, F, H3);
+
+	printf("l1-l2 is intersect?  %c, [%f, %f]\n", intersectl1l2 ? 'o' : 'x', H1[0], H1[1]);
+	printf("l2-l3 is intersect?  %c, [%f, %f]\n", intersectl2l3 ? 'o' : 'x', H2[0], H2[1]);
+	printf("l1-l3 is intersect?  %c, [%f, %f]\n", intersectl1l3 ? 'o' : 'x', H3[0], H3[1]);
+}
+
+
+char isIntersect(float* A, float* B, float* C, float* D, float* H)
+{
+	float CA[2] = { 0 };
+	float CB[2] = { 0 };
+	float CD[2] = { 0 };
+
+    // 각 벡터 계산
+	CA[0] = A[0] - C[0];
+	CA[1] = A[1] - C[1];
+	CB[0] = B[0] - C[0];
+	CB[1] = B[1] - C[1];
+	CD[0] = D[0] - C[0];
+	CD[1] = D[1] - C[1];
+
+    //각 벡터끼리의 외적의 크기 계산
+	float c1 = CD[0] * CA[1] - CD[1] * CA[0];
+	float c2 = CD[0] * CB[1] - CD[1] * CB[0];
+	float c3 = CB[0] * CA[1] - CB[1] * CA[0];
+
+	float a = -c2 / (c1 - c2);
+	float b = c3 / (c1 - c2);
+
+	H[0] = CD[0] * b + C[0];
+	H[1] = CD[1] * b + C[1];
+
+ 	if (((0 <= a) && (a <= 1)) && ((0 <= b) && (b <= 1)))
+	{
+		return 1;
+	}
+	else
+	{
+		return 0;
+	}
+}
+```
+
+이에 대한 결과는 위에서 이야기한대로 $l_1, l_2$를 제외한 나머지 선분들은 교점을 갖지 않는 다는 것을 알 수 있습니다. 하지만 선분을 무한히 연장한 직선의 경우에는 서로 평행한 경우만 아니라면 무조건 교점이 발생하기 때문에, 각 선분들에 대한 직선끼리의 관계에서는 아래 그림에서와 같이 각 교점들을 출력한다.
+
+![그림2 - cmd result](..\..\00. Posting\자주 사용하는 수학들(1) - 두 선분의 교점 구하기\그림2 - cmd result.jpg)
