--- a/00. Posting/자주 사용하는 수학들(1) - 두 선분의 교점 구하기/자주 사용하는 수학들(1) - 두 선분의 교점 구하기.md
+++ b/00. Posting/자주 사용하는 수학들(1) - 두 선분의 교점 구하기/자주 사용하는 수학들(1) - 두 선분의 교점 구하기.md
@@ -4,7 +4,7 @@
 
 # Problem statement
 
-그렇다면, 임의의 두 직선이 만나는 것을 어떻게 판단 할 수 있을까요? 막연히 두개의 선분을 상상하면서 어디쯤에서 만나겠다는 생각만으로는 프로그래밍을 통한 구현을 할 수 없기 때문에 조금 더 구체적인 상황을 상상해봅니다. 아래의 그림1과 같이 점 $A(1,1), B(-1,-1)$로 이루어진 선분 $l_1$이 있고, 점 $C(1,-1), D(-1,1)$로 이루어진 선분 $l_2$, 그리고 점 $E(1.5,1.5), F(-1.5,1.5)$로 이루어진 선분 $l_3$가 있다고 생각해 봅니다.![fig1](..\..\01_SourceCode\01_Algebra_and_Geometry\fig\usally_used_math_1_day\fig1.jpg)
+그렇다면, 임의의 두 직선이 만나는 것을 어떻게 판단 할 수 있을까요? 막연히 두개의 선분을 상상하면서 어디쯤에서 만나겠다는 생각만으로는 프로그래밍을 통한 구현을 할 수 없기 때문에 조금 더 구체적인 상황을 상상해봅니다. 아래의 그림1과 같이 점 $A(1,1), B(-1,-1)$로 이루어진 선분 $l_1$이 있고, 점 $C(1,-1), D(-1,1)$로 이루어진 선분 $l_2$, 그리고 점 $E(1.5,1.5), F(-1.5,1.5)$로 이루어진 선분 $l_3$가 있다고 생각해 봅니다.![fig1](https://raw.githubusercontent.com/leeh8911/alg_tata_blog/master/01_SourceCode_Mat/01_Algebra_and_Geometry/fig/usally_used_math_1_day/fig1.jpg)
 
 여기서 위 그림을 보면서 $l_1, l_2, l_3$에 해당하는 **직선**의 경우에는 각각 $(0,0), (1.5, 1.5), (-1.5, 1.5)$ 세개의 지점에서 만나게 될 겁니다. 하지만, 눈에 보이는 **선분**들의 교점은 $(0,0)$만 존재하는 상황이죠. 그러면 먼저 선분 $l_1, l_2$가 만나는 상황부터 풀어보도록 하겠습니다. 
 
@@ -114,4 +114,4 @@ char isIntersect(float* A, float* B, float* C, float* D, float* H)
 
 이에 대한 결과는 위에서 이야기한대로 $l_1, l_2$를 제외한 나머지 선분들은 교점을 갖지 않는 다는 것을 알 수 있습니다. 하지만 선분을 무한히 연장한 직선의 경우에는 서로 평행한 경우만 아니라면 무조건 교점이 발생하기 때문에, 각 선분들에 대한 직선끼리의 관계에서는 아래 그림에서와 같이 각 교점들을 출력한다.
 
-![그림2 - cmd result](..\..\00. Posting\자주 사용하는 수학들(1) - 두 선분의 교점 구하기\그림2 - cmd result.jpg)
+![그림2 - cmd result](https://raw.githubusercontent.com/leeh8911/alg_tata_blog/master/00.%20Posting/%EC%9E%90%EC%A3%BC%20%EC%82%AC%EC%9A%A9%ED%95%98%EB%8A%94%20%EC%88%98%ED%95%99%EB%93%A4(1)%20-%20%EB%91%90%20%EC%84%A0%EB%B6%84%EC%9D%98%20%EA%B5%90%EC%A0%90%20%EA%B5%AC%ED%95%98%EA%B8%B0/%EA%B7%B8%EB%A6%BC2%20-%20cmd%20result.jpg](https://raw.githubusercontent.com/leeh8911/alg_tata_blog/master/00. Posting/자주 사용하는 수학들(1) - 두 선분의 교점 구하기/그림2 - cmd result.jpg)
