--- a/00. Posting/자주 사용하는 수학들(2) - 좌표계 변환/자주 사용하는 수학들(2) - 좌표계 변환.md
+++ b/00. Posting/자주 사용하는 수학들(2) - 좌표계 변환/자주 사용하는 수학들(2) - 좌표계 변환.md
@@ -1,6 +1,6 @@
 # Intro
 
-좌표계 변환이 사용되는 예시.
+안녕하세요, 두번째 포스트로 인사드리는 서준이네입니다. 이번에도 다양한 분야에서 두루 사용하고 있는 주제에 대해 이야기를 해보려 합니다. 세상에는 참 많은 관점들이 있습니다. 이렇게 바라보는 시각에 따라 상대적으로 다른 것들에 대해 공통적으로 이야기하기 위해서는 하나의 관점으로 통일하여 바라보는 것이 중요하지요. 이러한 것을 수학적으로는 어떤 좌표계를 
 
 # Problem Statement
 
